tests/ui/consts/issue-94675.stderr
error[E0015]: cannot call non-const fn `Vec::<u32>::len` in constant functions
  --> $DIR/issue-94675.rs:9:27
   |
LL |         self.bar[0] = baz.len();
   |                           ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0277]: the trait bound `Vec<usize>: ~const IndexMut<usize>` is not satisfied
  --> $DIR/issue-94675.rs:9:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^ vector indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `~const IndexMut<usize>` is not implemented for `Vec<usize>`
note: the trait `IndexMut<usize>` is implemented for `Vec<usize>`, but that implementation is not `const`
  --> $DIR/issue-94675.rs:9:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^

error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/issue-94675.rs:9:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
